Implemented Wording suggestions

--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-cmdLineArgs.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-cmdLineArgs.html
@@ -1,4 +1,6 @@
-    Allows the user to add additional Ranorex command line arguments. For example
+<div>    
+    Allows you to add Ranorex command line arguments. Some of the most important ones include:
+    <br>
     <table style="margin-left: auto; margin-right: auto;" border="2">
         <tbody>
             <tr>
@@ -39,3 +41,4 @@
             </tr>
         </tbody>
     </table>
+</div>
