--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxReportDirectory.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxReportDirectory.html
@@ -1,1 +1,3 @@
-Sets the path of the report file. If no path is provided, the current directory is used.
+<div>
+    Allows you to specify the directory that your report will be saved to. If you don’t specify a path, the directory where your test executable is located will be used.
+</div>
