--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReport.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReport.html
@@ -1,3 +1,5 @@
 <div>
-    Compresses the report (including associated files) to a single archive (".rxzlog" extension). By enabling this option, you will gain access to additional input fields.
+    Compresses the report and the associated files into a single archive with the .rxzlog extension. The following additional input fields will appear when this option is enabled:
+        <li>Compressed report directory</li>
+        <li>Compressed report file name</li>
 </div>
