--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxGlobalParameter.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxGlobalParameter.html
@@ -1,5 +1,5 @@
-    Creates or overrides values for global parameters specified in the test suite.
-    <br>
-    Currently the parameters must be entered with the following schema:
-    ParameterName="Value"
-    You can either use a semicolon or a new line to separate different parameters
+<div>
+    Allows you to create or override values for global parameters set in the test suite.
+    Enter parameters according to the following pattern: "ParameterName=Value"
+    Separate parameters with semicolons or newlines.
+</div>
