--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxTestSuiteFilePath.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxTestSuiteFilePath.html
@@ -1,3 +1,3 @@
 <div>
-    Path to your Ranorex Test Suite file (*.rxtst) that is located in the output directory of your Ranorex test.
+    Enter the path to the test suite file (*.rxtst) located in the output folder of your solution.
 </div>
