--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportDirectory.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportDirectory.html
@@ -1,3 +1,3 @@
 <div>
-    Sets the path of the zipped report file. If no path is provided, the current directory is used.
+    Allows you to specify the directory that your compressed report will be saved to. If you don’t specify a path, the directory where your test executable is located will be used.
 </div>
