Change format of table

--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-cmdLineArgs.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-cmdLineArgs.html
@@ -4,8 +4,8 @@
     <table style="margin-left: auto; margin-right: auto;" border="2">
         <tbody>
             <tr>
-                <td>Flag</td>
-                <td>Function</td>
+                <th>Flag</th>
+                <th>Function</th>
             </tr>
             <tr>
                 <td>config | cfg:&lt;config parameter name&gt;=&lt;value&gt;</td>
