--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxRunConfiguration.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxRunConfiguration.html
@@ -1,5 +1,6 @@
 <div>
-    Runs the test suite using one of the run configurations available in the test suite. Enter the exact name of the run configuration you want to use. By default, the run configuration currently selected in the test suite is used.
-    
+    Runs the test suite using one of the run configurations available in the test suite. Enter the exact name of the run
+    configuration you want to use. By default, the run configuration currently selected in the test suite is used.
+
     If you want to create or edit run configurations, please use Ranorex Studio or the Ranorex Test Suite Runner.
 </div>
