--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportDirectory.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportDirectory.html
@@ -1,3 +1,3 @@
 <div>
-    Allows you to specify the directory that your compressed report will be saved to.  If you don’t specify a path, the working directory (Jenkins Workspace) will be used.
+    Allows you to specify the directory that your compressed report will be saved to. If you don’t specify a path, the working directory (Ranorex Working Directory) will be used.
 </div>
