--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportFile.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxZippedReportFile.html
@@ -1,3 +1,3 @@
 <div>
-    Allows you to specify the file name of the compressed report with the standard placeholders available in the <a href="https://www.ranorex.com/support/user-guide-20/lesson-4-ranorex-test-suite.html#c16095" target="_blank">test suite settings</a>. By default, the file name specified in the test suite settings is used (for example: %S_%Y%M%D_%T.rxlog).
+    Allows you to specify the file name of the compressed report with the standard placeholders available in the <a href="https://www.ranorex.com/support/user-guide-20/lesson-4-ranorex-test-suite.html#c16095" target="_blank">test suite settings</a>. If no filename is specified, the same name as the "Ranorex Report File Name" is used.
 </div>
