--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxGlobalParameter.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxGlobalParameter.html
@@ -1,5 +1,5 @@
 <div>
     Allows you to create or override values for global parameters set in the test suite.
     Enter parameters according to the following pattern: "ParameterName=Value"
-    Separate parameters with semicolons or newlines.
+    Separate parameters with semicolons or add one parameter per line.
 </div>
