Add Help texts for Test Rail integration

--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxTestRail.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxTestRail.html
@@ -1,4 +1,5 @@
 <div>
     Reports the test run results to TestRail via API.
-    Requires Username and Password for test rail instance
+    Requires 'Test Rail User' and 'Test Rail Password'.
 </div>
+
