--- a/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxReportDirectory.html
+++ b/src/main/resources/com/ranorex/jenkinsranorexplugin/RanorexRunnerBuilder/help-rxReportDirectory.html
@@ -1,3 +1,3 @@
 <div>
-    Allows you to specify the directory that your report will be saved to. If you don’t specify a path, the working directory (Jenkins Workspace) will be used.
+    Allows you to specify the directory that your report will be saved to. If you don’t specify a path, the location of your Ranorex Test Suite file will be used.
 </div>
